# cpp-code-snippets

./: 0_int_long_float_double.cpp  741. Cherry Pickup.cpp  NULL_nullptr.cpp  RAII.cpp  README.md  advance.cpp  advance_next_prev.cpp  any_of.cpp  any_of_all_of.cpp  array_length.cpp  assert.cpp  assert_with_custom_message.cpp  atomic.cpp  backtrace.c  bit_length.cpp  bitset.cpp  bitset_add_least_significant_bit.cpp  bitset_rightmost set bit.cpp  bitset_rightmost_set_bit.cpp  call_parent_function.cpp  change_directory.cpp  char*_append_char.c  char*_find(contain)_nth_substr.c  char*_split(strtok).c  char_star_append_char.c  char_star_find(contain)_nth_substr.c  char_star_split(strtok).c  char_star_substr.c  combination.cpp  combination_count.cpp  combination_count_pascal_triangle.cpp  complex.cpp  const_cast.cpp  const_return_value.c  const_return_value.cpp  container_value_type.cpp  copy_if_python_filter.cpp  copy_vector_to_array.cpp  count_if.cpp  count_set_bits.cpp  (+293 more)
Cartographer/: README.md
Eigen/: README.md  rotate_around_center.cpp  rotation_matrix_to_angle_axis.cpp  rows_cols.cpp  std_vector_conversion.cpp  to_std_vector.cpp  type_cast.cpp
GoogleTest/: README.md
GoogleTest/gtest_demo/: CMakeLists.txt  README.md  compile_and_run.sh  hello_test.cc
OpenNI2/: README.md
ROS/: README.md
VTK/: README.md  read_jpeg.cpp  read_jpeg2.cpp  show_cv_mat.cpp
base64_encoding/: README.md  (+1 more)
base64_encoding/encode_image/: CMakeLists.txt  encode_image.cpp
cpr/send_img/: CMakeLists.txt  README.md
cpr/send_img/src/: send_img.cpp
cpr/send_img/src/cpr/: CMakeLists.txt
(+133 files in other folders)
